--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 background-image: url('woorin.png');
                 background-position: center;
                 background-size: cover;
-                background-color: rgb(255, 243, 189);
+                background-color: rgb(252, 242, 199);
                 border-radius: 10%;
            }
            .main {
@@ -38,7 +38,7 @@
                 color:rgb(250, 232, 132);
                 font-size: 16px;
 
-                margin-top: 0px;
+                margin-top: 20px;
                 margin-bottom: 0px;
            }
            .sub1 {
@@ -93,7 +93,7 @@
                 box-shadow: 3px 3px 5px 0px  rgb(43, 38, 36);
            }
            .wrap > a:hover {
-                background-color: #eee6d9;
+                background-color: rgba(250, 232, 132, 0.825);
                 font-size: 15px;
            }
         </style>
@@ -101,7 +101,6 @@
     <body>
         <div class="wrap">
              <div class="profile"></div>
-             <h1 class="main"> ✨WOORIN✨ </h1>
              <p class="sub"> Handmade Silver jewelry Studio</p>
              <p class="sub1">(Antique & Bohemian Style🏹)</p>
              <P class="sub2"> "WOORIN" </P>
